--- a/login_Militar.html
+++ b/login_Militar.html
@@ -2,28 +2,25 @@
 <html lang="es">
 
 <head>
-    <!--Meta tags-->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!--TITULO DE PÁGINA-->
     <link rel="shortcut icon" href="Img/Escudo.png" type="image/x-icon">
     <title>Sistema de Vacunación COVID 19</title>
-
-    <!--ARCHIVOS CSS BOOTSTRAP 4-->
-    <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css">
-
-    <!--ARCHIVO CSS PERSONALIZADOS-->
-    <link type="text/css" rel="stylesheet" href="css/estilos.css">
+    <!-- Bootstrap CSS -->
+    <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" />
+    <!-- Custom CSS -->
+    <link type="text/css" rel="stylesheet" href="css/estilos.css" />
+    <title>Personal Médico</title>
 </head>
 
 <body class="d-flex flex-column min-vh-100">
-    <!--Encabezado 1-->
-    <nav class=" navbar navbar-dark navbar-expand-sm text-light bg-primary ">
+    <nav class=" navbar navbar-dark navbar-expand-sm text-light bg-primary">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 text-left ">
-                    <h1 class="font-weight-bold display-4 d-none d-sm-flex">Sistema de Vacunación <br class="d-none d-lg-inline "> COVID 19</h1>
+                <div class="col-lg-8 text-left">
+                    <h1 class="font-weight-bold display-4 d-none d-sm-flex">Sistema de Vacunación <br class="d-none d-lg-inline"> COVID 19</h1>
                     <h2 class="font-weight-bold d-flex d-sm-none">Sistema de Vacunación <br class="d-none d-lg-inline "> COVID 19</h2>
                 </div>
                 <div class="d-none d-lg-flex col-lg-4 my-auto">
@@ -34,6 +31,7 @@
             </div>
         </div>
     </nav>
+
     <!--Encabezado 2-->
     <nav class=" navbar navbar-dark navbar-expand-sm text-light bg-tercero">
         <div class="container">
@@ -49,48 +47,144 @@
     <!-- Sección de Formulario de Login-->
     <section class="container mt-3">
         <div class="row mx-3">
-            <form class="col-lg-6 my-auto">
-                <h1 class="h2 d-none d-sm-flex mt-2 mb-4 ">Llene sus datos de Militar</h1>
-                <h3 class="d-flex d-sm-none mt-2 mb-4">Llene sus datos de Militar</h3>
+            <form class="col-lg-6 my-auto needs-validation" id="login-form" action="" method="POST" novalidate>
+                <h1 class="h2 d-none d-sm-flex mt-2 mb-4 ">Llene sus datos personales</h1>
+                <h3 class="d-flex d-sm-none mt-2 mb-4">Llene sus datos personales</h3>
 
                 <div class="form-row">
                     <div class="col-8">
-                        <input type="text" class="form-control form-control-lg" placeholder="DNI">
+                        <input type="text" id="dni" pattern="[0-9]{8}" class="form-control form-control-lg"
+                            placeholder="DNI (1)" aria-describedby="inputGroupPrepend1" required>
+                        <small id="dniHelp" class="form-text text-muted">El número debe contener como máximo 8
+                            caracteres</small>
+                        <div class="valid-feedback">¡Correcto!</div>
+                        <div id="dni-feedback" class="invalid-feedback">Proporcione un número de DNI válido</div>
                     </div>
-                    <div class="col-4">
-                        <input type="text" class="form-control form-control-lg" placeholder="CUI">
+
+                    <div class="col-3">
+                        <input type="text" id="cui" pattern="[0-9]{1}" class="form-control form-control-lg"
+                            placeholder="CUI (2)" aria-describedby="inputGroupPrepend2" required>
+                        <small id="dniHelp" class="form-text text-muted">El número debe contener como máximo 1
+                            caracter</small>
+                        <div class="valid-feedback">¡Correcto!</div>
+                        <div id="dni-feedback" class="invalid-feedback">Proporcione un número de CUI válido</div>
                     </div>
-                </div>
-                <div class="form-row mt-4">
-                    <div class="col">
-                        <input type="text" class="form-control form-control-lg" placeholder="Fecha de emisión de DNI">
-                    </div>
-                </div>
-                <div class="form-row mt-4">
-                    <div class="col">
-                        <input type="text" class="form-control form-control-lg" placeholder="Código de Institución">
+
+                    <div class="col-1">
+                        <a href="#" data-toggle="popover" data-img="Img/DNI.png" title="Partes del DNI">
+                            <img class="img-fluid " src="Img/informacion.png " alt=" ">
+                        </a>
                     </div>
                 </div>
 
-                <button class="btn btn-lg btn-primary ml-auto mt-5">Ingresar</button>
+                <div class="form-row mt-4">
+                    <div class="col">
+                        <input type="text" id="fecha-emision" class="form-control form-control-lg" auto-slash="/"
+                            placeholder="Fecha de Emisión (3)" aria-describedby="inputGroupPrepend3" required
+                            pattern="(0?[1-9]|[12][0-9]|3[01])/(0?[1-9]|1[012])/\d{4}">
+                        <small id="dniHelp" class="form-text text-muted ">La fecha de emisión debe seguir el siguiente
+                            formato: dd/mm/yyyy</small>
+                        <div class="valid-feedback">¡Correcto!</div>
+                        <div class="invalid-feedback">Proporcione una fecha de emisión válida</div>
+                    </div>
+                </div>
+
+                <div class="form-row mt-4">
+                    <div class="col">
+                        <input type="text" id="cod-institucion" pattern="[0-9]{8}" class="form-control form-control-lg"
+                            placeholder="Código de Institución" aria-describedby="inputGroupPrepend1" required>
+                        <small id="dniHelp" class="form-text text-muted">El código de institución debe contener como
+                            máximo 8
+                            caracteres</small>
+                        <div class="valid-feedback">¡Correcto!</div>
+                        <div id="dni-feedback" class="invalid-feedback">Proporcione un código de institución válido</div>
+                    </div>
+                </div>
+
+                <div class="form-row text-center mb-3 justify-content-between align-items-center mt-5">
+                    <div class="col">
+                        <button class="btn btn-lg btn-primary ml-auto" type="submit"> <i class="fas fa-sign-in-alt"></i>
+                            Ingresar</button>
+                    </div>
+                    <div class="col">
+                        <a href="seleccion_Usuario.html" class="btn btn-lg btn-secondary ml-auto">
+                            <i class="fas fa-window-close"></i> Cancelar</a>
+                    </div>
+                </div>
+
             </form>
 
 
             <!-- Sección de MINSA y Anuncio-->
-            <div class="col-lg-6 mt-3 my-4 ml-auto">
+            <div class="col-lg-6 mt-3 ml-auto my-4">
                 <div class="mt-4 embed-responsive embed-responsive-16by9 mb-2">
-                    <iframe class="embed-responsive-item" height="auto" src="https://www.youtube.com/embed/W2Nmz9ViOFA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="embed-responsive-item" height="auto" src="https://www.youtube.com/embed/W2Nmz9ViOFA"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
                 </div>
             </div>
         </div>
+
     </section>
+
+
+
+    <!-- Reserva de derechos-->
     <footer class="mt-auto bg-dark text-light text-center">
         <p> IHC-Grupo 4 Copyright © 2021 Todos los derechos reservados</p>
     </footer>
 
+
+
+    <!--Validacion-->
+    <script>
+
+        (function () {
+            'use strict';
+            window.addEventListener('load', function () {
+                var forms = document.getElementsByClassName('needs-validation');
+                // Prevenir submit
+                var validation = Array.prototype.filter.call(forms, function (form) {
+                    form.addEventListener('submit', function (event) {
+                        if (form.checkValidity() === false) {
+                            event.preventDefault();
+                            event.stopPropagation();
+
+                        }
+                        form.classList.add('was-validated');
+                    }, false);
+                });
+
+                var inputs = document.getElementsByClassName('form-control')
+
+                // Validación en tiempo real
+                var validation = Array.prototype.filter.call(inputs, function (input) {
+
+                    input.addEventListener('blur', function (event) {
+                        // reset
+                        input.classList.remove('is-invalid')
+                        input.classList.remove('is-valid')
+
+                        if (input.checkValidity() === false) {
+                            input.classList.add('is-invalid')
+                        }
+                        else {
+                            input.classList.add('is-valid')
+                        }
+                    }, false);
+                });
+
+            }, false);
+        })();
+    </script>
+    <script src="https://kit.fontawesome.com/160f79963e.js" crossorigin="anonymous"></script>
     <script src="js/jquery-3.5.1.min.js "></script>
     <script src="js/bootstrap.min.js "></script>
-    <script src="js/popper.min.js "></script>
+    <script src="js/popover.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
