--- a/profile-medico.html
+++ b/profile-medico.html
@@ -52,11 +52,11 @@
             <div class="list-group list-group-flush d-inline-flex align-items-center">
                 <a href="#" class="list-group-item list-group-item-action bg-light disabled font-weight-bolder">
                     <i class="fas fa-user"></i> Información Personal y Turnos</a>
-                <a href="ReportePM.html" class="list-group-item list-group-item-action bg-light">
+                <a href="report-medico.html" class="list-group-item list-group-item-action bg-light">
                     <i class="fas fa-question"></i> Consultar fecha de Vacunación</a>
                 <a href="#" class="list-group-item list-group-item-action bg-light">
                     <i class="fas fa-file-signature"></i> Solicitar cambio de turno</a>
-                <a href="seleccion_Usuario.html" class="list-group-item list-group-item-action bg-light">
+                <a href="Seleccion_Personal.html" class="list-group-item list-group-item-action bg-light">
                     <i class="fas fa-sign-out-alt"></i> Salir</a>
             </div>
         </div>
@@ -121,7 +121,7 @@
                                             <strong>NÚMERO DE COLEGIATURA</strong>
                                         </td>
                                         <td>
-                                            <span>FM-1023839</span>
+                                            <span>PM-1023839</span>
                                         </td>
                                     </tr>
                                     <tr>
