--- a/report-medico.html
+++ b/report-medico.html
@@ -53,7 +53,7 @@
             <div class="list-group list-group-flush d-inline-flex align-items-center">
 
                 <!-- Consultar fecha de vacunacion -->
-                <a href="#" class="list-group-item list-group-item-action bg-light  disabled font-weight-bolder">
+                <a href="report-medico.html" class="list-group-item list-group-item-action bg-light  disabled font-weight-bolder">
                     <div class="row">
                         <div class="col-2"><i class="fas fa-question"></i></div>
                         <div class="col-10">Consultar Turno de Vacunación</div>
@@ -75,7 +75,7 @@
                     </div>
                 </a>
                 <!-- Salir -->
-                <a href="#" class="list-group-item list-group-item-action bg-light">
+                <a href="home.html" class="list-group-item list-group-item-action bg-light">
                     <div class="row">
                         <div class="col-2"><i class="fas fa-sign-out-alt"></i></div>
                         <div class="col-10">Salir</div>
