--- a/report-militar.html
+++ b/report-militar.html
@@ -75,7 +75,7 @@
                     </div>
                 </a>
                 <!-- Salir -->
-                <a href="#" class="list-group-item list-group-item-action bg-light">
+                <a href="home.html" class="list-group-item list-group-item-action bg-light">
                     <div class="row">
                         <div class="col-2"><i class="fas fa-sign-out-alt"></i></div>
                         <div class="col-10">Salir</div>
