--- a/asign-personal.html
+++ b/asign-personal.html
@@ -40,7 +40,7 @@
     <section class="container mt-1 mb-3">
         <!--Enunciado Superior-->
         <div class="row mx-5 d-flex justify-content-center text-center ">
-            <h1 class="display-4 d-none d-lg-flex font-weight-bold text-primary mt-2 mb-3 ">¿qué personal asignará?</h1>
+            <h1 class="display-4 d-none d-lg-flex font-weight-bold text-primary mt-2 mb-3 ">¿Qué personal asignará?</h1>
             <h2 class="d-flex d-lg-none font-weight-bold text-primary mt-5 mx-5 mb-4 ">¿Qué personal asignará?</h2>
         </div>
 
