--- a/asign-militar.html
+++ b/asign-militar.html
@@ -218,7 +218,7 @@
                 <a href="#" class="btn btn-lg btn-primary">
                     <i class="fas fa-edit"></i> Asignar</i> </a>
 
-                <a href="PanelPM.html" class="btn btn-lg btn-secondary">
+                <a href="profile-militar.html" class="btn btn-lg btn-secondary">
                     <i class="fas fa-window-close"></i> Cancelar </a>
                
             </div>
