--- a/asign-personal.html
+++ b/asign-personal.html
@@ -45,7 +45,7 @@
         </div>
 
         <!--Boton Personal Salud -->
-        <a href="form-medico.html" style="text-decoration:none " class="row btn-group btn-group-sm mx-5 mt-5 justify-content-center d-none d-sm-flex ">
+        <a href="asign-medico.html" style="text-decoration:none " class="row btn-group btn-group-sm mx-5 mt-5 justify-content-center d-none d-sm-flex ">
             <div class="col-6 btn-group btn-group-sm justify-content-center " role="group " aria-label="Basic example ">
                 <div class="boton1 ">
                     <button type="button " class="btn btn-secondary boton1 ">
@@ -59,7 +59,7 @@
             </div>
         </a>
 
-        <a href="form-adulto.html" style="text-decoration:none " class="row btn-group btn-group-sm mx-5 mt-5 justify-content-center d-flex d-sm-none ">
+        <a href="asign-medico.html" style="text-decoration:none " class="row btn-group btn-group-sm mx-5 mt-5 justify-content-center d-flex d-sm-none ">
             <div class="col-11 btn-group btn-group-sm justify-content-center " role="group " aria-label="Basic example ">
                 <div class="boton1 ">
                     <button type="button " class="btn btn-secondary boton1 ">
