--- a/form-militar.html
+++ b/form-militar.html
@@ -55,22 +55,6 @@
             <div class="sidebar-heading h4 text-secundario">MENÚ DE OPCIONES</div>
             <div class="list-group list-group-flush d-inline-flex align-items-center">
 
-                <!-- Informacion Personal y Turnos -->
-                <a href="#" class="list-group-item list-group-item-action bg-light">
-                    <div class="row">
-                        <div class="col-2"><i class="fas fa-user"></i></div>
-                        <div class="col-10">Información Personal y Turnos</div>
-                    </div>
-                </a>
-
-                <!-- Consultar fecha de vacunacion -->
-                <a href="#" class="list-group-item list-group-item-action bg-light">
-                    <div class="row">
-                        <div class="col-2"><i class="fas fa-question"></i></div>
-                        <div class="col-10">Consultar fecha de Vacunación</div>
-                    </div>
-                </a>
-                
                 <!-- Registrar Personal de vacunación -->
                 <a href="#" class="list-group-item list-group-item-action bg-light navbar-toogle" data-toggle="collapse"
                     data-target="#navbarToggleRegistrar" aria-controls="navbarToggleRegistrar" aria-expanded="false"
@@ -81,14 +65,14 @@
                     </div>
                 </a>
                 <!-- Registrar personal médico -->
-                <a href="#" class="list-group-item list-group-item-action bg-light collapse" id="navbarToggleRegistrar">
+                <a href="#" class="list-group-item list-group-item-action bg-secondary collapse" id="navbarToggleRegistrar">
                     <div class="row">
                         <div class="col-2"><i class="fas fa-user-plus"></i></div>
                         <div class="col-10">Registrar personal médico</div>
                     </div>
                 </a>
                 <!-- Registrar personal médico -->
-                <a href="#" class="list-group-item list-group-item-action bg-light collapse" id="navbarToggleRegistrar">
+                <a href="#" class="list-group-item list-group-item-action bg-secondary collapse" id="navbarToggleRegistrar">
                     <div class="row">
                         <div class="col-2"><i class="fas fa-user-plus"></i></div>
                         <div class="col-10">Registrar personal militar</div>
@@ -120,7 +104,7 @@
                     </div>
                 </a>
                 <!-- Salir -->
-                <a href="#" class="list-group-item list-group-item-action bg-light">
+                <a href="home.html" class="list-group-item list-group-item-action bg-light">
                     <div class="row">
                         <div class="col-2"><i class="fas fa-sign-out-alt"></i></div>
                         <div class="col-10">Salir</div>
