--- a/form-medico.html
+++ b/form-medico.html
@@ -90,74 +90,77 @@
                         <h4 class="font-weight-bold d-flex d-sm-none "> Registro de Personal Médico </h4>
                     </div>
                     <!-- Formulario -->
-                    <!-- Fila 1 -->
-                    <div class="row mt-5">
+                    <form action="">
+                        <!-- Fila 1 -->
+                        <div class="row mt-5">
 
-                        <div class="col-5 mr-2">
-                            <div class="row">
-                                <p>Nombres:</p>
+                            <div class="col-5 mr-2">
+                                <div class="row">
+                                    <p>Nombres:</p>
+                                </div>
+                                <div class="row">
+                                    <input type="text" class="form-control form-control-lg" placeholder="Nombres" aria-describedby="inputGroupPrepend1" required>
+                                </div>
                             </div>
-                            <div class="row">
-                                <input type="text" class="form-control form-control-lg" placeholder="Nombres" aria-describedby="inputGroupPrepend1" required>
+
+                            <div class="col-5">
+                                <div class="row">
+                                    <p>Apellidos: </p>
+                                </div>
+                                <div class="row">
+                                    <input type="text" class="form-control form-control-lg" placeholder="Apellidos" aria-describedby="inputGroupPrepend1" required>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Fila 2 -->
+                        <div class="row mt-5">
+                            <div class="col-4 mr-2">
+                                <div class="row">
+                                    <p>DNI: </p>
+                                </div>
+                                <div class="row">
+                                    <input type="text" class="form-control form-control-lg" placeholder="Número DNI" aria-describedby="inputGroupPrepend1" required>
+                                </div>
+                            </div>
+                            <div class="col-2 mr-2">
+                                <div class="row">
+                                    <p>CUI: </p>
+                                </div>
+                                <div class="row">
+                                    <input type="text" class="form-control form-control-lg" placeholder="CUI" aria-describedby="inputGroupPrepend1" required>
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="row">
+                                    <p>Fecha de emisión: </p>
+                                </div>
+                                <div class="row">
+                                    <input type="date" class="form-control form-control-lg" placeholder="dd/mm/aaaa" aria-describedby="inputGroupPrepend1" required>
+                                </div>
                             </div>
                         </div>
 
-                        <div class="col-5">
-                            <div class="row">
-                                <p>Apellidos: </p>
+                        <!-- Fila 4 -->
+                        <div class="row mt-5 mb-5">
+                            <div class="col-5 mr-2">
+                                <div class="row">
+                                    <p>Número de teléfono o celular: </p>
+                                </div>
+                                <div class="row">
+                                    <input type="text" class="form-control form-control-lg" placeholder="Número de teléfono o celular" aria-describedby="inputGroupPrepend1" required>
+                                </div>
                             </div>
-                            <div class="row">
-                                <input type="text" class="form-control form-control-lg" placeholder="Apellidos" aria-describedby="inputGroupPrepend1" required>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Fila 2 -->
-                    <div class="row mt-5">
-                        <div class="col-4 mr-2">
-                            <div class="row">
-                                <p>DNI: </p>
-                            </div>
-                            <div class="row">
-                                <input type="text" class="form-control form-control-lg" placeholder="Número DNI" aria-describedby="inputGroupPrepend1" required>
-                            </div>
-                        </div>
-                        <div class="col-2 mr-2">
-                            <div class="row">
-                                <p>CUI: </p>
-                            </div>
-                            <div class="row">
-                                <input type="text" class="form-control form-control-lg" placeholder="CUI" aria-describedby="inputGroupPrepend1" required>
+                            <div class="col-5 mr-2">
+                                <div class="row">
+                                    <p>Código de colegiatura: </p>
+                                </div>
+                                <div class="row">
+                                    <input type="text" class="form-control form-control-lg" placeholder="Código de colegiatura" aria-describedby="inputGroupPrepend1" required>
+                                </div>
                             </div>
                         </div>
-                        <div class="col-4">
-                            <div class="row">
-                                <p>Fecha de emisión: </p>
-                            </div>
-                            <div class="row">
-                                <input type="date" class="form-control form-control-lg" placeholder="dd/mm/aaaa" aria-describedby="inputGroupPrepend1" required>
-                            </div>
-                        </div>
-                    </div>
+                    </form>
 
-                    <!-- Fila 4 -->
-                    <div class="row mt-5 mb-5">
-                        <div class="col-5 mr-2">
-                            <div class="row">
-                                <p>Número de teléfono o celular: </p>
-                            </div>
-                            <div class="row">
-                                <input type="text" class="form-control form-control-lg" placeholder="Número de teléfono o celular" aria-describedby="inputGroupPrepend1" required>
-                            </div>
-                        </div>
-                        <div class="col-5 mr-2">
-                            <div class="row">
-                                <p>Código de colegiatura: </p>
-                            </div>
-                            <div class="row">
-                                <input type="text" class="form-control form-control-lg" placeholder="Código de colegiatura" aria-describedby="inputGroupPrepend1" required>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
             <!-- botones -->
